--- a/animate-menu/css/style.css
+++ b/animate-menu/css/style.css
@@ -32,99 +32,85 @@ header a {
 }
 
 /* line 14, ../sass/style.scss */
-nav {
+#main_menu {
   position: fixed;
-  top: 0px;
-  left: 0px;
-  padding-top: 60px;
+  top: 0;
+  left: 0;
 }
 
 /* line 15, ../sass/style.scss */
-nav > a {
+#main_menu > a {
   position: absolute;
-  top: 3px;
-  left: 3px;
-  width: 50px;
+  top: 0;
+  left: 0;
   height: 50px;
+  width: 50px;
   z-index: 1000;
 }
 
 /* line 16, ../sass/style.scss */
-nav > a span {
-  display: block;
+#main_menu > a span {
+  position: absolute;
+  top: 7px;
+  left: 4px;
   height: 4px;
   width: 30px;
   background: #fff;
-  top: 5px;
-  left: 5px;
-  position: absolute;
+  -webkit-transition: all 0.3s;
 }
 
 /* line 17, ../sass/style.scss */
-nav > a span.balkje_boven {
-  -webkit-transition: -webkit-transform 0.3s;
+#main_menu > a span.balk2 {
+  top: 16px;
 }
 
 /* line 18, ../sass/style.scss */
-nav > a span.balkje_midden {
-  -webkit-transition: -webkit-transform 0.3s;
-  top: 14px;
+#main_menu > a span.balk3 {
+  top: 25px;
 }
 
-/* line 19, ../sass/style.scss */
-nav > a span.balkje_onder {
-  -webkit-transition: -webkit-transform 0.3s;
-  top: 23px;
+/* line 20, ../sass/style.scss */
+#main_menu.open > a span {
+  background: #000;
 }
 
 /* line 21, ../sass/style.scss */
-nav.open > a span {
-  background: #000;
-  top: 5px;
+#main_menu.open > a span.balk1 {
+  top: 15px;
+  -webkit-transform: rotate(45deg);
 }
 
 /* line 22, ../sass/style.scss */
-nav.open > a span.balkje_boven {
-  -webkit-transform: rotate(45deg);
-  top: 15px;
-}
-
-/* line 23, ../sass/style.scss */
-nav.open > a span.balkje_midden {
+#main_menu.open > a span.balk2 {
   opacity: 0;
 }
 
-/* line 24, ../sass/style.scss */
-nav.open > a span.balkje_onder {
-  -webkit-transform: rotate(-45deg);
+/* line 23, ../sass/style.scss */
+#main_menu.open > a span.balk3 {
   top: 15px;
+  -webkit-transform: rotate(-45deg);
+}
+
+/* line 25, ../sass/style.scss */
+#main_menu ul {
+  background: #fff;
+  position: absolute;
+  padding-top: 40px;
+  top: 0;
+  left: 0;
+  width: 250px;
+  height: 100vh;
+  -webkit-transform: translateX(-250px);
+  -webkit-transition: -webkit-transform 0.3s;
 }
 
 /* line 26, ../sass/style.scss */
-nav ul {
-  -webkit-transition: transform;
-  -webkit-transition: -webkit-transform 0.3s;
-  width: 250px;
-  background: #fff;
-  position: absolute;
-  top: 0px;
+#main_menu ul li a {
   padding: 10px;
-  padding-top: 40px;
-  height: 100vh;
-  -webkit-transform: translateX(-250px);
+  display: block;
 }
 
-/* line 27, ../sass/style.scss */
-nav ul li {
-  padding: 10px 0;
-}
-
-/* line 29, ../sass/style.scss */
-nav.open ul {
+/* line 28, ../sass/style.scss */
+#main_menu.open ul {
   -webkit-transform: translateX(0px);
-}
-
-/* line 30, ../sass/style.scss */
-section {
-  padding: 20px;
 }
