--- a/animate-menu/sass/style.scss
+++ b/animate-menu/sass/style.scss
@@ -11,20 +11,18 @@ body 		{font-family: "Helvetica", arial, sans-serif; padding-top:40px; }
 header 		{color: #fff; background: #000; padding: 14px; height: 40px; text-align: center; position: fixed; top: 0px; width: 100%;}
 header a 	{color: #fff; text-decoration: none;}
 
-nav  		{position: fixed; top: 0px; left: 0px; padding-top: 60px;}
-nav > a 	{position: absolute; top:3px; left: 3px; width: 50px; height: 50px; z-index: 1000;}
-nav > a span {display: block; height: 4px; width: 30px; background: #fff; top:5px; left:5px; position: absolute;}
-nav > a span.balkje_boven  {-webkit-transition:-webkit-transform 0.3s;}
-nav > a span.balkje_midden {-webkit-transition:-webkit-transform 0.3s; top: 14px;}
-nav > a span.balkje_onder  {-webkit-transition:-webkit-transform 0.3s;top:23px;}
+#main_menu	{position: fixed; top: 0; left: 0; }
+#main_menu > a {position: absolute; top: 0; left:0; height: 50px; width: 50px; z-index: 1000;}
+#main_menu > a span {position: absolute; top: 7px; left: 4px; height: 4px; width: 30px; background: #fff; -webkit-transition: all 0.3s;}
+#main_menu > a span.balk2 {top: 16px;}
+#main_menu > a span.balk3 {top: 25px;}
 
-nav.open > a span { background: #000; top:5px;}
-nav.open > a span.balkje_boven  {-webkit-transform: rotate(45deg); top:15px;}
-nav.open > a span.balkje_midden {opacity: 0;}
-nav.open > a span.balkje_onder  {-webkit-transform: rotate(-45deg);top:15px;}
+#main_menu.open > a span {background: #000;}
+#main_menu.open > a span.balk1 {top: 15px; -webkit-transform: rotate(45deg);}
+#main_menu.open > a span.balk2 {opacity: 0;}
+#main_menu.open > a span.balk3 {top: 15px;-webkit-transform: rotate(-45deg);}
 
-nav ul  	{-webkit-transition:transform; -webkit-transition:-webkit-transform 0.3s; width: 250px; background: #fff; position: absolute; top: 0px; padding: 10px; padding-top: 40px; height: 100vh; -webkit-transform: translateX(-250px);}
-nav ul li 	{padding: 10px 0;}
+#main_menu ul 	{background: #fff; position: absolute; padding-top: 40px; top:0; left:0; width: 250px; height: 100vh; -webkit-transform: translateX(-250px); -webkit-transition:-webkit-transform 0.3s;}
+#main_menu ul li a 	{padding: 10px; display:block;}
 
-nav.open ul {-webkit-transform: translateX(0px);}
-section 	{padding: 20px;}
+#main_menu.open ul {-webkit-transform: translateX(0px);}
